# LLM-UAVswarm-performance

./: .gitignore  README.md
docs/: control_adaptation_logging.md  experiment_evaluation_pipeline.md  iapf_accel_feedforward.md  iapf_experiment_tooling.md  lfs_validation_and_logging.md  minimum_jerk_trajectory_metrics.md  multi_sim_jsonschema_and_system_id_fix.md  safety_aware_topology_assignment.md  xy_crossing_cost_fix.md
experiments/: README.md
experiments/commands/: llm_grouped_commands.json  llm_invalid_commands.json  llm_sequential_commands.json  llm_simple_commands.json  llm_style_commands.json
experiments/docs/: experiments_01.md  experiments_02.md  experiments_03.md  experiments_04.md  experiments_05.md  experiments_06.md  experiments_07.md  experiments_08.md  experiments_09.md  experiments_10.md  experiments_11.md  requirements.md
experiments/scripts/: analyze_llm_parser_experiment.py  analyze_pairwise_distance.py  build_experiment_01_dataset.py  collect_rosbag_topics.sh  compare_lfs_fix.py  eval_assignment_offline.py  eval_iapf.py  eval_lfs_compiler.py  eval_llm_parser.py  eval_semantic_control.py  eval_trajectory_profiles.py  llm_parser_experiment.py  plot_all.py  (+1 more)
location_allocate/: package.xml  setup.cfg  setup.py
location_allocate/location_allocate/: lfs_validator.py  llm_parse_logger.py  location_allocate.py  no_location.py  safety_aware_allocator.py  visualize_goals.py
location_allocate/test/: test_lfs_validator.py  test_safety_aware_allocator.py
schemas/: lfs_schema.json
uav_swarm_interfaces/: CMakeLists.txt  package.xml
(+40 files in other folders)
